# xrest

./: .gitignore  CONTRIBUTING.md  README.md  Taskfile.yml  go.mod  go.sum  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
cmd/wails/: collectiongateway.go  collectiongateway_test.go  greetservice.go  historygateway.go  historygateway_test.go  main.go  requestgateway.go  secretsgateway.go  servicegateway.go  servicegateway_test.go  settingsgateway.go
cmd/xrest/: main.go
crates/xrest-resolve/: Cargo.toml  README.md
crates/xrest-resolve/examples/: gcp_test.rs
crates/xrest-resolve/src/: lib.rs  resolver.rs  variable.rs
crates/xrest-resolve/src/resolvers/: aws.rs  azure.rs  dotenv.rs  gcp.rs  keychain.rs  mod.rs  system.rs
crates/xrest-resolve/tests/: resolver_integration.rs
frontend/: assets.go  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  style.css
frontend/tests/: App.test.ts  setup.ts
internal/adapters/: git.go  git_test.go  history.go  history_test.go  http.go  http_test.go  keyring.go  preflight.go  token_cache.go  (+1 more)
scripts/: guardrails.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/xrest-core/: Cargo.toml
src-tauri/crates/xrest-core/src/: git.rs  lib.rs  request.rs  secrets.rs  settings.rs  traits.rs  types.rs
src-tauri/crates/xrest-core/src/auth/: cache.rs  mod.rs  preflight.rs
src-tauri/crates/xrest-core/src/import/: curl.rs  mod.rs  service.rs  swagger.rs
src-tauri/crates/xrest-core/src/service/: dotenv.rs  mod.rs  service.rs
src-tauri/crates/xrest-infra/: Cargo.toml
src-tauri/crates/xrest-infra/src/: fs.rs  git.rs  history.rs  http.rs  keyring.rs  paths.rs
(+192 files in other folders)
