[package]
name = "xrest-core"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.13", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
once_cell = "1.21.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
openapiv3 = "2.0.0"
async-trait = "0.1"
base64 = "0.21"
urlencoding = "2.1"
curl-parser = "0.6.0"
url = "2.5.8"
csscolorparser = "0.7"
rand = "0.8"

[features]
mocks = ["mockall"]
desktop = []

[dev-dependencies]
mockito = "1"
mockall = "0.13"
