[package]
name = "xrest-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
xrest-core = { path = "../xrest-core" }

async-trait = "0.1"
git2 = { version = "0.20.3", features = ["vendored-openssl", "vendored-libgit2"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
tauri = { version = "2", features = [] }
reqwest = { version = "0.13.1", features = ["json", "multipart", "query"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5.8"

[dev-dependencies]
mockall = "0.13"
